src/test/deca/context/invalid/homemade/superclass_not_existing.deca
// Description :
// Trying to create a class extended a non-existant class

class A {
}
class B extends A {
}
class C extends D {
}